# DriftSearch

./: LICENSE  README.md  burst_funcs.py  cli.py  pyproject.toml  search.py
DriftSearch/: __init__.py  cli.py  config.py  plotting.py
example/: single_target_example.py
